# Unity-AIDev-SmartContext

./: .gitignore  ARCHITECTURE.md  CLAUDE_AI_INTEGRATION.md  CMakeLists.txt  DEVELOPMENT_STATUS.md  LICENSE  NEXT_STEPS.md  NO_API_USAGE_GUIDE.md  PROJECT_SUMMARY.md  README.md  README_KR.md  debug_treesitter.cpp  project_spec.md  test_plugin  test_plugin.cpp
CLI/: CLIApplication.cpp  CLIApplication.h  CLIArguments.cpp  CLIArguments.h  CMakeLists.txt  main.cpp
Core/: CMakeLists.txt  CoreEngine.cpp  CoreEngine.h
Core/AI/: ClaudeAnalyzer.cpp  ClaudeAnalyzer.h  HTTPClient.cpp  UnityAPIDetector.cpp  UnityAPIDetector.h
Core/Configuration/: AnalysisConfig.cpp  AnalysisConfig.h
Core/ContextSummarizer/: ArchitectureAnalyzer.cpp  ArchitectureAnalyzer.h  DataFlowAnalyzer.cpp  DataFlowAnalyzer.h  ProjectSummarizer.cpp  ProjectSummarizer.h
Core/MetadataGenerator/: ComponentMetadata.cpp  ComponentMetadata.h  JSONExporter.cpp  JSONExporter.h  ProjectMetadata.cpp  ProjectMetadata.h
Core/RealTime/: FileWatcher.h
Core/TreeSitterEngine/: ASTNode.cpp  ASTNode.h  CSharpParser.cpp  CSharpParser.h  TreeSitterWrapper.cpp  TreeSitterWrapper.h
Core/UnityAnalyzer/: ComponentDependencyAnalyzer.cpp  ComponentDependencyAnalyzer.h  LifecycleAnalyzer.cpp  LifecycleAnalyzer.h  MonoBehaviourAnalyzer.cpp  MonoBehaviourAnalyzer.h  ScriptableObjectAnalyzer.cpp  ScriptableObjectAnalyzer.h  UnityPatternDetector.cpp  UnityPatternDetector.h
MCP/: claude_desktop_config.json  mcp_server.py  requirements.txt
TestSamples/: GameManager.cs  GameSettings.cs  ItemDatabase.cs  SampleMonoBehaviour.cs
Tests/: CMakeLists.txt  test_core_engine.cpp  test_framework.h  test_main.cpp  test_metadata_generator.cpp  test_treesitter_engine.cpp  test_unity_analyzer.cpp
Tests/SampleUnityProject/: EnemyAI.cs  GameManager.cs  PlayerController.cs  UIController.cs
UnityPlugin/: README.md  build_plugin.sh  package.json
UnityPlugin/Editor/: Unity.LLMContextGenerator.Editor.asmdef
UnityPlugin/Editor/Scripts/: AdvancedLLMContextWindow.cs  LLMContextGeneratorWindow.cs
UnityPlugin/Native/: CMakeLists.txt  UnityInterface.cpp  UnityInterface.h
UnityPlugin/Runtime/: Unity.LLMContextGenerator.Runtime.asmdef
UnityPlugin/Runtime/Scripts/: AnalysisDataTypes.cs  LLMContextAnalyzer.cs
VSCodeExtension/: package.json
VSCodeExtension/src/: extension.ts
WebInterface/: server.py
WebInterface/templates/: index.html
